<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ASCII Art Daydream</string>
    <string name="pref_photo_sources">Photo sources</string>
    <string name="pref_photo_sources_summary">Select which gallery albums should be used to make ASCII artworks</string>
    <string name="pref_photo_change_rate">Photo change rate</string>
    <string name="pref_photo_change_rate_dlg_title">Seconds to show every photo</string>
    <string name="pref_photo_change_rate_summary">Every %d seconds</string>
    <string name="pref_photo_chars">Characters to use</string>
    <string name="default_ascii_chars">ABCDEFGHIJKLMNOPQRSTUWVXYZ0123456789</string>
</resources>
